[gd_scene load_steps=38 format=2]

[ext_resource path="res://scenes/hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://scenes/hud/hud-layout.png" type="Texture" id=2]
[ext_resource path="res://scenes/hud/status/Status.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/hud/money_display/MoneyDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/nokia/mini-nokia-8.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/hud/inventory/Inventory.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/hud/attributes/Attributes.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/buttons/hud_other/HubOther.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/buttons/potion_button/PotionButton-2.png" type="Texture" id=9]
[ext_resource path="res://scenes/buttons/potion_button/PotionButton-3.png" type="Texture" id=10]
[ext_resource path="res://scenes/hud/NotificationAchievements.gd" type="Script" id=11]
[ext_resource path="res://scenes/achievements/notifications.png" type="Texture" id=12]
[ext_resource path="res://scenes/achievements/achievements_sprites/wood_age.png" type="Texture" id=13]
[ext_resource path="res://scenes/panels/menu_panel.png" type="Texture" id=14]
[ext_resource path="res://scenes/buttons/wide/Wide.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/buttons/hud_menu/HUDMenuButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/hud/win_lost/WinLost.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/shop/Shop.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/achievements/Achievements.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/buttons/shop/Shop.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/buttons/achievements/Achievement.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=1]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Inventory:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector2( 0, -142 ), Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Inventory:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0, -142 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Attributes:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attributes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 250, 160 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Attributes:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attributes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 250, 160 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HubOther:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.184433, 0.925781, 0.196017, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 240, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 240, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=8]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath("Achievements:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 240, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Achievements:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("Achievements:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 240, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Achievements:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=10]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 1.5, 2.2, 2.4 ),
"transitions": PoolRealArray( 0.25, 1, 1, 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0, -40 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, -40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2.4, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=11]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 240, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HUDMenuButton:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 4 ),
"update": 0,
"values": [ Vector2( 220, -22 ), Vector2( 220, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 240, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HUDMenuButton:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Vector2( 220, 0 ), Vector2( 220, -22 ) ]
}

[sub_resource type="Animation" id=13]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 2 ]
}

[sub_resource type="Animation" id=14]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 0, 0 ]
}

[sub_resource type="Animation" id=15]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Curtain:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 0, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WinLost:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( 1, 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0, -162 ), Vector2( 0, -162 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WinLost:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.4, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true ]
}

[sub_resource type="Animation" id=16]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 1.7, 1.9 ),
"transitions": PoolRealArray( 0.25, 1, 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 4, 4 ), Vector2( 4, 4 ), Vector2( 6, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "tuiu_sound"
} ]
}

[node name="HUD" type="CanvasLayer" groups=[
"HUD",
]]
script = ExtResource( 1 )

[node name="Placeholder" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="Status" parent="." instance=ExtResource( 3 )]

[node name="MoneyDisplay" parent="." instance=ExtResource( 4 )]

[node name="EnemiesAmount" type="Label" parent="."]
margin_left = 152.0
margin_top = 148.0
margin_right = 235.0
margin_bottom = 158.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.404233, 0.773438, 0.175232, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Enemies: 100/100"
align = 1
valign = 1

[node name="EnemiesRequired" type="Label" parent="."]
margin_left = 152.0
margin_top = 154.0
margin_right = 235.0
margin_bottom = 164.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.404233, 0.773438, 0.175232, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Required: 99"
align = 1
valign = 1

[node name="Inventory" parent="." instance=ExtResource( 6 )]
editor/display_folded = true

[node name="HUDInventory" parent="Inventory" index="1"]
focus_mode = 0
enabled_focus_mode = 0

[node name="Inv" parent="Inventory" index="2"]
editor/display_folded = true

[node name="AnimInv" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )

[node name="Attributes" parent="." instance=ExtResource( 7 )]
position = Vector2( 250, 160 )
scale = Vector2( 1e-05, 1e-05 )

[node name="AnimAttributes" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 3 )
anims/show = SubResource( 4 )

[node name="HubOther" parent="." instance=ExtResource( 8 )]
margin_left = 210.0
margin_top = 130.0
margin_right = 225.0
margin_bottom = 145.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0

[node name="AvailableAttributes" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 5 )

[node name="AnimShop" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 6 )
anims/show = SubResource( 7 )

[node name="AnimAchievements" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 8 )
anims/show = SubResource( 9 )

[node name="Potion" type="TextureButton" parent="."]
margin_left = 216.0
margin_top = 104.0
margin_right = 228.0
margin_bottom = 118.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="Time" type="Label" parent="."]
margin_left = 144.0
margin_top = 8.60504
margin_right = 195.0
margin_bottom = 22.605
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.862745, 0.666667, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Clock" type="Timer" parent="Time"]
autostart = true

[node name="NotificationAchievements" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 0, -40 )
script = ExtResource( 11 )

[node name="Bg" type="Sprite" parent="NotificationAchievements"]
position = Vector2( 120, 20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="Anim" type="AnimationPlayer" parent="NotificationAchievements"]
anims/show_and_hide = SubResource( 10 )

[node name="Achievement" type="Sprite" parent="NotificationAchievements"]
position = Vector2( 70, 16 )
texture = ExtResource( 13 )

[node name="Title" type="Label" parent="NotificationAchievements"]
margin_left = 86.0
margin_right = 186.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.780392, 0.811765, 0.866667, 1 )
custom_colors/font_color_shadow = Color( 0.101961, 0.0980392, 0.196078, 1 )
text = "hola1, hola2, hola3, hola4, hola5, hola6"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Menu" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 240, 0 )
scale = Vector2( 1e-05, 1e-05 )

[node name="Panel" type="NinePatchRect" parent="Menu"]
margin_left = 70.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 88.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 14 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Buttons" type="Node2D" parent="Menu/Panel"]
position = Vector2( 31.9507, 32 )

[node name="Resume" parent="Menu/Panel/Buttons" instance=ExtResource( 15 )]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = -4.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Label" parent="Menu/Panel/Buttons/Resume" index="0"]
text = "RESUME"

[node name="Menu" parent="Menu/Panel/Buttons" instance=ExtResource( 15 )]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 12.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Label" parent="Menu/Panel/Buttons/Menu" index="0"]
text = "MENU"

[node name="AnimMenu" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 11 )
anims/show = SubResource( 12 )

[node name="HUDMenuButton" parent="." instance=ExtResource( 16 )]
margin_left = 220.0
margin_right = 230.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0

[node name="Curtain" type="ColorRect" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
margin_left = -8.0
margin_top = -8.0
margin_right = 248.0
margin_bottom = 168.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimCurtain" type="AnimationPlayer" parent="Curtain"]
anims/hide = SubResource( 13 )
anims/show = SubResource( 14 )

[node name="WinLost" parent="." instance=ExtResource( 17 )]
visible = false
position = Vector2( 0, -162 )

[node name="Shop" parent="." instance=ExtResource( 18 )]
visible = false
position = Vector2( 240, 0 )

[node name="Achievements" parent="." instance=ExtResource( 19 )]
visible = false
position = Vector2( 240, 0 )

[node name="ShopButton" parent="." instance=ExtResource( 20 )]
margin_left = 220.0
margin_top = 24.0
margin_right = 236.0
margin_bottom = 40.0
focus_mode = 0
toggle_mode = true
shortcut_in_tooltip = false

[node name="Achievement" parent="." instance=ExtResource( 21 )]
margin_left = 200.0
margin_top = 2.0
margin_right = 216.0
margin_bottom = 18.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0

[node name="AnimWinLost" type="AnimationPlayer" parent="."]
anims/show = SubResource( 15 )

[node name="Debug" type="Node2D" parent="."]
editor/display_folded = true
visible = false
scale = Vector2( 0.6, 0.6 )

[node name="VarDificulty" type="Label" parent="Debug"]
margin_left = 3.0
margin_right = 83.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "VarDificulty: 10"
valign = 1

[node name="Display" type="Label" parent="."]
editor/display_folded = true
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -6.0
margin_right = 30.0
margin_bottom = 22.0
rect_scale = Vector2( 6, 6 )
rect_pivot_offset = Vector2( 30, 14 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0820312, 0.875, 0.131592, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "All Enemies Dead"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Anim" type="AnimationPlayer" parent="Display"]
anims/show = SubResource( 16 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]
[connection signal="toggled" from="Inventory/HUDInventory" to="." method="_on_HUDInventory_toggled"]
[connection signal="toggled" from="HubOther" to="." method="_on_HubOther_toggled"]
[connection signal="pressed" from="Potion" to="." method="_on_Potion_pressed"]
[connection signal="timeout" from="Time/Clock" to="." method="_on_Clock_timeout"]
[connection signal="pressed" from="Menu/Panel/Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/Panel/Buttons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="toggled" from="HUDMenuButton" to="." method="_on_HUDMenuButton_toggled"]
[connection signal="toggled" from="ShopButton" to="." method="_on_ShopButton_toggled"]
[connection signal="toggled" from="Achievement" to="." method="_on_Achievement_toggled"]
[connection signal="animation_finished" from="AnimWinLost" to="." method="_on_AnimWinLost_animation_finished"]

[editable path="Inventory"]

[editable path="Menu/Panel/Buttons/Resume"]

[editable path="Menu/Panel/Buttons/Menu"]
